Closed
Bug 426954
Opened 17 years ago
Closed 17 years ago
"XPConnect is being called on a scope without a 'Components' property!" assertion message is ridiculously long
Categories
(Core :: XPConnect, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: jruderman)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
2.06 KB,
patch
|
mrbkap
:
review+
|
Details | Diff | Splinter Review |
The "XPConnect is being called on a scope without a 'Components' property!" assertion message is way too long. When someone hits the assertion (which happens fairly often), it takes up a large portion of the terminal window, masking other messages they might be more interested in. I think the paragraph in the assertion message should become a comment.
###!!! ASSERTION: XPConnect is being called on a scope without a 'Components' property!
This is pretty much always bad. It usually means that native code is
making a callback to an interface implemented in JavaScript, but the
document where the JS object was created has already been cleared and the
global properties of that document's window are *gone*. Generally this
indicates a problem that should be addressed in the design and use of the
callback code.
: 'Error', file /Users/skywalker/Desktop/Mozilla/cvs/mozilla/js/src/xpconnect/src/xpcwrappednativescope.cpp, line 770
Attachment #313540 -
Flags: review?(mrbkap)
Comment 1•17 years ago
|
||
Comment on attachment 313540 [details] [diff] [review]
Patch moving the "This is pretty much always bad" paragraph to a comment
I think this is fine, but please keep the I_FOOLISHLY_WANT_... ifdef for other XPConnect users.
Attachment #313540 -
Flags: review?(mrbkap) → review+
Assignee | ||
Comment 2•17 years ago
|
||
Fixed, leaving the ifdef.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•