Reduce the length of the "XPConnect is being called on a scope without a 'Components' property!" assertion message (bug 426954).  r=mrbkap, debug-only.